--- a/easistent/kekw.less
+++ b/easistent/kekw.less
@@ -4,6 +4,7 @@
 @dark-hl: #2d343a;
 //#endregion COLORS
 
+
 //#region small fixes
 #master-header:not(:root.lsd *) {
     background: linear-gradient(to right, #54bed8 0%, #0077d8 100%);
@@ -53,7 +54,7 @@
         //-moz-box-sizing: border-box;
         //box-sizing     : border-box;
         background     : url('https://s3.eu-central-1.wasabisys.com/cdn.femboy.si/flop-no-content.jpeg') no-repeat;
-        background-size: cover;
+        background-size: 100%;
         //width          : 1000px;
         //height         : 500px;
         //padding-left   : 180px;
