Switched over to cdn.femboy.si

--- a/src/content/kekw.less
+++ b/src/content/kekw.less
@@ -36,7 +36,7 @@
 :root.flop {
 
     #login-navbar>ul>li.nav-preizkusno-obdobje>div>div>span.pull-left.circle-plus {
-        background-image: url('https://cdn.discordapp.com/emojis/820762592610877521.gif');
+        background-image: url('https://s3.eu-central-1.wasabisys.com/cdn.femboy.si/ea/floppa.gif');
         background-size : cover;
     }
 
@@ -55,7 +55,7 @@
         //display        : block;
         //-moz-box-sizing: border-box;
         //box-sizing     : border-box;
-        background     : url('https://s3.eu-central-1.wasabisys.com/cdn.femboy.si/flop-no-content.jpeg') no-repeat;
+        background     : url('https://s3.eu-central-1.wasabisys.com/cdn.femboy.si/ea/flop-no-content.jpeg') no-repeat;
         background-size: 100%;
         //width          : 1000px;
         //height         : 500px;
