--- a/src/content/kekw.less
+++ b/src/content/kekw.less
@@ -1,10 +1,8 @@
-
 //#region COLOR
 @dark-bg: #1b1e22;
 @dark-fg: #fff;
 @dark-hl: #2d343a;
 //#endregion COLORS
-
 
 //#region small fixes
 #master-header:not(:root.lsd *) {
@@ -17,74 +15,91 @@
 
 //#endregion
 
+//#region sigma
+
+div.header-info > p.pocetna-header-text {
+    text-shadow: 0px 0px 4px white, 0px 0px 4px white, 0px 0px 4px white,
+        0px 0px 4px white, 0px 0px 10px white;
+}
+
+//#endregion sigma
 
 :root.dark {
-
     body {
-        background-color: @dark-bg  !important;
-        color           : @dark-fg im !important;
+        background-color: @dark-bg !important;
+        color: @dark-fg im !important;
     }
 
     .paper-panel,
     .paper-panel-item,
     .dropdown-menu,
     .btn {
-        background-color: @dark-hl  !important;
-        color           : @dark-fg  !important;
+        background-color: @dark-hl !important;
+        color: @dark-fg !important;
     }
 
-    .btn, .dropdown-option {
-        &focus, &:focus, &:hover {
+    .btn,
+    .dropdown-option {
+        &focus,
+        &:focus,
+        &:hover {
             color: mix(@dark-hl, @dark-fg, 30%) !important;
-            background-color: @dark-hl  !important;
+            background-color: @dark-hl !important;
         }
     }
-
 }
 
 :root.flop {
-
-    #login-navbar>ul>li.nav-preizkusno-obdobje>div>div>span.pull-left.circle-plus {
-        background-image: url('https://s3.eu-central-1.wasabisys.com/cdn.femboy.si/ea/floppa.gif');
-        background-size : cover;
+    #login-navbar
+        > ul
+        > li.nav-preizkusno-obdobje
+        > div
+        > div
+        > span.pull-left.circle-plus {
+        background-image: url("https://s3.eu-central-1.wasabisys.com/cdn.femboy.si/ea/floppa.gif");
+        background-size: cover;
     }
 
-    #login-navbar>ul>li.nav-preizkusno-obdobje>div>div>span.ml-1x {
+    #login-navbar > ul > li.nav-preizkusno-obdobje > div > div > span.ml-1x {
         font-size: 0;
     }
 
-    #login-navbar>ul>li.nav-preizkusno-obdobje>div>div>span.ml-1x::after {
+    #login-navbar
+        > ul
+        > li.nav-preizkusno-obdobje
+        > div
+        > div
+        > span.ml-1x::after {
         font-size: 1.5rem;
-        opacity  : 1;
-        display  : inline;
-        content  : "FLOPPER MODE";
+        opacity: 1;
+        display: inline;
+        content: "FLOPPER MODE";
     }
 
     img[src="/images/dijaki_stars_app/empty-state.png"] {
         //display        : block;
         //-moz-box-sizing: border-box;
         //box-sizing     : border-box;
-        background     : url('https://s3.eu-central-1.wasabisys.com/cdn.femboy.si/ea/flop-no-content.jpeg') no-repeat;
+        background: url("https://s3.eu-central-1.wasabisys.com/cdn.femboy.si/ea/flop-no-content.jpeg")
+            no-repeat;
         background-size: 100%;
         //width          : 1000px;
         //height         : 500px;
         //padding-left   : 180px;
     }
-
 }
 
 :root.lsd {
-
     //apply this to all for cancer
-    #xa-app>div:nth-child(1) * {
-        animation   : partybar 2s linear infinite;
+    #xa-app > div:nth-child(1) * {
+        animation: partybar 2s linear infinite;
     }
 
     body {
         animation: spin2win 2s linear infinite;
     }
 
-    body>*>* {
+    body > * > * {
         animation: lsdskew 6s linear infinite;
     }
 
@@ -171,25 +186,22 @@
     @keyframes desync {
         0% {
             transform: rotate(0deg);
-            filter   : blur(0px);
+            filter: blur(0px);
         }
 
         94% {
             transform: rotate(5deg);
-            filter   : blur(0px);
-
+            filter: blur(0px);
         }
 
         95% {
             transform: rotate(5deg);
-            filter   : blur(15px);
-
+            filter: blur(15px);
         }
 
         100% {
             transform: rotate(0deg);
-            filter   : blur(0px);
-
+            filter: blur(0px);
         }
     }
 
@@ -200,6 +212,6 @@
             @{value} {
                 background: linear-gradient(1.80deg * @value, rgba(255, 0, 0, 1) 0%, rgba(255, 0, 251, 1) 16%, rgba(0, 20, 255, 1) 32%, rgba(0, 255, 241, 1) 48%, rgba(0, 255, 40, 1) 64%, rgba(255, 250, 0, 1) 80%, rgba(255, 0, 0, 1) 100%);
             }
-        })
+        });
     }
 }
